Cleanup API and pom file
